test/FAIL/runcmd/memory_match/01_test_run.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="not a multiple of 4"
#-------

load boucle.o
run 0x1001